--- a/assets/styles/modules/_forms.scss
+++ b/assets/styles/modules/_forms.scss
@@ -1,6 +1,9 @@
 .ssn-validator-input-container {
+	position: relative;
+
 	&.inline-container {
 		display: inline-block;
+		padding-bottom: 25px;
 	}
 }
 
@@ -12,6 +15,7 @@ input[type="text"].ssn-validator-input {
 
 .ssn-validator-form-text {
 	opacity: 0;
+	position: absolute;
 	min-height: 25px;
 	display: block;
 
