--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,1 +1,4 @@
+@import "~jquery-ui-bundle/jquery-ui.css";
+@import "~jquery-ui-bundle/jquery-ui.theme.css";
 @import "modules/forms";
+@import "modules/progressBar";
