--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,3 +2,4 @@
 @import "~jquery-ui-bundle/jquery-ui.theme.css";
 @import "modules/forms";
 @import "modules/progressBar";
+@import "modules/table";
