--- a/assets/styles/modules/_forms.scss
+++ b/assets/styles/modules/_forms.scss
@@ -1,9 +1,17 @@
+.ssn-validator-form-inner {
+	label {
+		display: block;
+		margin-bottom: 5px;
+	}
+}
+
 .ssn-validator-input-container {
 	position: relative;
 
 	&.inline-container {
 		display: inline-block;
 		padding-bottom: 25px;
+		vertical-align: middle;
 	}
 }
 
@@ -11,6 +19,10 @@ input[type="text"].ssn-validator-input {
 	display: inline-block;
 	margin: auto;
 	text-align: center;
+	height: 78px;
+	font-size: 30px;
+	background-color: #f9f9f9;
+    border: 1px solid #d3d3d3;
 }
 
 .ssn-validator-form-text {
@@ -24,13 +36,13 @@ input[type="text"].ssn-validator-input {
 	}
 
 	&.error {
-		color: red;
+		color: $red;
 	}
 }
 
-
 .ssn-validator-input-separator {
 	font-size: 20px;
+	margin-bottom: 12.5px;
 	display: inline-block;
 	vertical-align: middle;
 }
