--- a/assets/styles/modules/_forms.scss
+++ b/assets/styles/modules/_forms.scss
@@ -2,6 +2,7 @@ $firstColumnWidth: 304px;
 $secondColumnWidth: 140px;
 
 .ssn-validator-form-inner {
+	line-height: 1.75;
 	label {
 		display: block;
 		margin-bottom: 5px;
